! Fix alignments issue due to font switch

--- a/packages/vapor/less/controls/slideToggle.less
+++ b/packages/vapor/less/controls/slideToggle.less
@@ -105,6 +105,8 @@ label.coveo-slide-toggle-label {
     }
 
     span.toggle-label {
+        color: @block-text-color;
+        font-size: 16px;
         vertical-align: 2px;
     }
 }
