--- a/packages/vapor/less/elements/buttons.less
+++ b/packages/vapor/less/elements/buttons.less
@@ -87,7 +87,7 @@
     border-radius: 0;
     cursor: pointer;
     font-family: @base-font-family;
-    font-size: 13px;
+    font-size: 14px;
     font-weight: 700;
     padding: 0;
     text-decoration: none;
@@ -107,7 +107,7 @@
 
     svg {
         fill: @coveo-dark-blue-grey;
-        vertical-align: text-bottom;
+        vertical-align: sub;
     }
 
     .btn-slim-colorize(@coveo-dark-blue-grey, @default-slim-button-hover, @default-slim-button-disabled);
