--- a/packages/vapor/less/elements/tables.less
+++ b/packages/vapor/less/elements/tables.less
@@ -104,7 +104,7 @@ table {
                         display: block;
                         position: relative;
                         left: -11px;
-                        top: 2px;
+                        top: 3px;
                         opacity: 0.3;
 
                         &:hover {
@@ -171,7 +171,6 @@ table {
     tbody tr {
         font-size: 15px;
         height: 36px;
-        line-height: initial;
 
         td {
             text-align: left;
@@ -216,7 +215,7 @@ table {
                 }
 
                 &.group-collapse i {
-                    margin: 1.5px;
+                    margin-right: 1.5px;
                 }
 
                 #actions {
